new home detail - added slider, added structure, displayed content text, added raw dev shortcode

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -99,6 +99,7 @@
 @import "sections/shortcode-form";
 @import "sections/block-links";
 @import "sections/new-home-details";
+@import "sections/gallery-images";
 
 
 /*
@@ -111,6 +112,7 @@
 @import "pages/insight-detail";
 @import "pages/property-my-account";
 @import "pages/branch-detail";
+@import "pages/new-home-detail";
 
 
 // Responsive Design
