--- a/src/sass/essential/sections/_new-home-details.scss
+++ b/src/sass/essential/sections/_new-home-details.scss
@@ -35,4 +35,13 @@
             margin-bottom: 0;
         }
     }
+
+    &--view-map{
+        margin-top: 35px;
+
+        a{
+            max-width: 270px;
+            width: 100%;
+        }
+    }
 }
