--- a/components/blocks/cta-box.twig
+++ b/components/blocks/cta-box.twig
@@ -16,6 +16,6 @@
 
     {% include 'components/parts/link.twig' with {
         link: fields.action_link,
-        css_class: 'link-border link-border--red block-action-link'
+        css_class: 'btn btn-lg text-uppercase btn-secondary block-action-link'
     } %}
 </div>
