--- a/src/sass/essential/parts/_footer.scss
+++ b/src/sass/essential/parts/_footer.scss
@@ -30,6 +30,10 @@
                     columns: 2;
                     -webkit-columns: 2;
                     -moz-columns: 2;
+
+                    li{
+                        display: grid;
+                    }
                 }
             }
         }
