--- a/src/sass/essential/pages/_properties-search.scss
+++ b/src/sass/essential/pages/_properties-search.scss
@@ -15,6 +15,10 @@
             font-size: 22px;
             text-transform: uppercase;
             font-weight: normal;
+
+            .address-keyword-text{
+                color: $support-color2;
+            }
         }
 
         .propertyhive-ordering{
