--- a/templates/404.twig
+++ b/templates/404.twig
@@ -31,5 +31,5 @@
         </div>
     </section>
 
-    {#{% include 'components/static-sections/book-valuation.twig' %}#}
+    {% include 'components/static-sections/book-valuation.twig' %}
 {% endblock %}
