--- a/components/static-sections/book-valuation.twig
+++ b/components/static-sections/book-valuation.twig
@@ -1,25 +1,29 @@
-<section class="page-section page-section--padding50 section-content-image {{ section.ci_logo_watermark ? 'has-logo-watermark' : '' }}">
-    <div class="container">
-        <div class="row no-gutters">
-            <div class="col-xl-8">
-                <div class="bg-primary section-content-image--content">
-                    {% if section.ci_title %}
-                        <h2 class="h1">{{ section.ci_title }}</h2>
-                    {% endif %}
-                    <div class="section-content-image--content_inner content-clear">{{ section.ci_content }}</div>
-                    {% if section.ci_link %}
-                        {% include 'components/parts/link.twig' with {
-                            link: section.ci_link,
-                            css_class: 'link-border link-border--red'
-                        } %}
-                    {% endif %}
+{% if options.section_valuation.content %}
+
+    <section class="page-section page-section--padding50 section-content-image section-valuation has-logo-watermark">
+        <div class="container">
+            <div class="row no-gutters">
+                <div class="col-xl-9">
+                    <div class="bg-primary section-content-image--content">
+                        {% if options.section_valuation.title %}
+                            <h2 class="h1">{{ options.section_valuation.title }}</h2>
+                        {% endif %}
+                        <div class="section-content-image--content_inner content-clear">{{ options.section_valuation.content }}</div>
+                        {% if options.section_valuation.link %}
+                            {% include 'components/parts/link.twig' with {
+                                link: options.section_valuation.link,
+                                css_class: 'link-border link-border--red'
+                            } %}
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
-            <div class="col-xl-4">
-                <div class="section-content-image--image-wrap">
-                    <img src="{{ section.ci_image }}">
+                <div class="col-xl-3">
+                    <div class="section-content-image--image-wrap">
+                        <img src="{{ options.section_valuation.image }}">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
+{% endif %}
