--- a/src/sass/essential/common/_boostrap-overriden.scss
+++ b/src/sass/essential/common/_boostrap-overriden.scss
@@ -41,3 +41,25 @@ h3,.h3{
         }
     }
 }
+
+.custom-control-label{
+    &:before{
+        border-width: 2px;
+    }
+}
+
+.custom-control-input{
+    &:checked ~ .custom-control-label{
+        &:before{
+            background: none;
+        }
+    }
+}
+
+.custom-checkbox{
+    .custom-control-label{
+        &:before{
+            border-radius: 4px;
+        }
+    }
+}
