--- a/src/sass/essential/common/_properties.scss
+++ b/src/sass/essential/common/_properties.scss
@@ -168,6 +168,8 @@ ul.properties{
 
                 img{
                     width: 100%;
+                    height: 250px;
+                    object-fit: cover;
                 }
 
                 .property-images-count,
