--- a/components/sections/fullwidth_background.twig
+++ b/components/sections/fullwidth_background.twig
@@ -1,3 +1,3 @@
 <div class="page-section page-section--padding50">
-    <img src="{{ section.fwb_image }}">
+    <img class="w-100" src="{{ section.fwb_image }}">
 </div>
