--- a/components/static-sections/page-top.twig
+++ b/components/static-sections/page-top.twig
@@ -21,10 +21,14 @@
             </div>
             <div class="col-xl-6">
                 <div class="section-page-top--image-wrap">
-                    {% if thumbnail_size %}
-                        <img src="{{ image | resize(thumbnail_size.w,thumbnail_size.h) }}">
+                    {% if image %}
+                        {% if thumbnail_size %}
+                            <img src="{{ image | resize(thumbnail_size.w,thumbnail_size.h) }}">
+                        {% else %}
+                            <img src="{{ image }}">
+                        {% endif %}
                     {% else %}
-                        <img src="{{ image }}">
+                        <img src="{{ theme.link ~ '/dist/images/placeholder/placeholder1300x400.jpg' }}">
                     {% endif %}
                 </div>
             </div>
