--- a/src/sass/essential/global/_blog-post.scss
+++ b/src/sass/essential/global/_blog-post.scss
@@ -13,8 +13,8 @@
         &__cat{
             position: absolute;
             background-color: #FFF;
-            left: 0;
-            bottom: 0;
+            left: -1px;
+            bottom: -1px;
             padding: 15px 20px;
         }
     }
