--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -99,6 +99,7 @@
 @import "sections/shortcode-form";
 @import "sections/block-links";
 @import "sections/new-home-details";
+@import "sections/new-home-developments";
 @import "sections/gallery-images";
 
 
