--- a/src/sass/essential/pages/_new-home-detail.scss
+++ b/src/sass/essential/pages/_new-home-detail.scss
@@ -4,18 +4,66 @@
             display: block;
             border: 1px solid $support-color4;
 
-            li{
+            .dev-item{
                 padding: 20px;
+                display: flex;
+                align-items: center;
+
+                & > *{
+                    flex: 1;
+                }
 
                 &:not(:first-child) {
                     border-top: 1px solid $support-color4;
                 }
 
-                &.dev-item{
-                    display: flex;
+                &--floorplan{
+                    flex-basis: 30%;
+                    max-width: 30%;
+                    text-align: center;
 
-                    & > *{
-                        flex: 1;
+                    img{
+                        max-height: 85px;
+                    }
+                }
+
+                &--details{
+                    .property-residential-details{
+                        list-style: none;
+                        margin: 0 0 15px;
+                        padding: 0;
+
+                        li{
+                            display: inline-block;
+
+                            &:not(:first-child) {
+                                margin-left: 20px;
+                            }
+
+                            i{
+                                color: $brand-main-red;
+                            }
+                        }
+                    }
+                }
+
+                &--price{
+                    .price-box{
+                        color: $support-color2;
+
+                        .price{
+                            font-size: 22px;
+                            font-weight: normal;
+                            color: $brand-main-blue;
+                        }
+                    }
+
+                    .flag{
+                        position: relative!important;
+                        display: inline-block;
+                        font-size: 14px!important;
+                        padding: 2px 15px!important;
+                        text-transform: none!important;
                     }
                 }
             }
