--- a/components/static-sections/latest-posts.twig
+++ b/components/static-sections/latest-posts.twig
@@ -5,7 +5,7 @@
 
 {% if posts.found_posts %}
 
-    <section class="page-section page-section--padding50 section-latest-posts">
+    <section class="page-section page-section--padding50 section-latest-posts" data-aos="fade-left">
         {% if ignore_container != 1 %}<div class="container">{% endif %}
             <div class="page-section--heading">
                 <div class="row align-items-center">
