--- a/components/sections/cta_carousel.twig
+++ b/components/sections/cta_carousel.twig
@@ -4,14 +4,14 @@
         <div class="owl-carousel sa-cta-carousel sa-carousel-numeric-dots" data-carousel="cta">
             <div class="cta-slide">
                 <div class="row">
-                    <div class="col-xl-6">
+                    <div class="col-xl-6" data-aos="slide-down">
                         <div class="cta-slide--content">
                             <h2 class="h1">Marketing Message Lorem Ipsum Dolor Sit Amet</h2>
                             <p>Supporting message lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                             <a href="#" class="link-border link-border--red">Find out more</a>
                         </div>
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-xl-6" data-aos="slide-up">
                         <img src="{{ theme.link }}/dist/images/temp/cta-slide.jpg">
                     </div>
                 </div>
