--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -14,6 +14,8 @@
 @import "../../../node_modules/owl.carousel/src/scss/owl.carousel";
 @import "../../../node_modules/owl.carousel/src/scss/owl.theme.default";
 
+@import "../../../node_modules/aos/src/sass/aos";
+
 
 /*
 * Fonts
