--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -13,6 +13,7 @@
     <meta name="msapplication-navbutton-color" content="{{options.android_navigation_bar_colour}}">
 
     <script src="https://kit.fontawesome.com/d7df359a02.js" crossorigin="anonymous"></script>
+    {#<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>#}
 
     {{ function('wp_head') }}
     {{ options.head_scripts }}
