--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -50,7 +50,7 @@
                             </div>
                             <div class="col-xl-6 d-flex justify-content-end">
                                 <div class="price-block">
-                                    <div class="price-block--from">Price From</div>
+                                    <div class="price-block--from">Prices From</div>
                                     <div class="price-block--price">£{{ fn('ph_display_price_field',post.nh_price) }}</div>
                                     <div class="price-block--flag">New Home</div>
                                 </div>
