--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -7,7 +7,7 @@
     <section class="page-section page-section--padding50 pb-0 section-gallery-images">
         <div class="container">
             <div class="property-detail-back-action-wrap">
-                <a href="javascript:;" onclick="history.back();"><i class="fa-regular fa-angle-left"></i> BACK TO SEARCH RESULTS</a>
+                <a href="javascript:;" onclick="history.back();"><i class="fa-regular fa-angle-left"></i> BACK TO NEW HOMES</a>
             </div>
 
             {% if gallery_images %}
