--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -90,7 +90,7 @@
                             <h3 class="text-uppercase">Get in Contact</h3>
                             <div class="branch-info">
                                 {% if contacts.phone_number %}
-                                    <div class="branch-info--phone-number h3 text-uppercase">{{ contacts.phone_number }}</div>
+                                    <a href="tel:{{ contacts.phone_number | replace({' ':''}) }}" class="branch-info--phone-number h3 text-uppercase">{{ contacts.phone_number }}</a>
                                 {% endif %}
                                 <a href="#" class="btn btn-lg btn-secondary text-uppercase">Email Us</a>
                             </div>
