--- a/src/sass/essential/sections/_page-top.scss
+++ b/src/sass/essential/sections/_page-top.scss
@@ -21,6 +21,11 @@
         .shortcode-link-arrow{
             display: inline-block;
 
+            &:hover{
+                text-decoration: none;
+                color: $brand-main-red;
+            }
+
             &:last-child{
                 margin-bottom: 0;
             }
