--- a/templates/single-branch.twig
+++ b/templates/single-branch.twig
@@ -18,10 +18,10 @@
                     <div>
                         <ul class="mb-0">
                             {% if post.branch_sale_phone %}
-                                <li><i class="fa-light fa-phone"></i> Sales {{ post.branch_sale_phone }}</li>
+                                <li><i class="fa-light fa-phone"></i> <a href="tel:{{ post.branch_sale_phone | replace({' ':''}) }}">Sales {{ post.branch_sale_phone }}</a></li>
                             {% endif %}
                             {% if post.branch_let_phone %}
-                                <li><i class="fa-light fa-phone"></i> Lettings {{ post.branch_let_phone }}</li>
+                                <li><i class="fa-light fa-phone"></i> <a href="tel:{{ post.branch_let_phone | replace({' ':''}) }}">Lettings {{ post.branch_let_phone }}</a></li>
                             {% endif %}
                         </ul>
                     </div>
