--- a/templates/archive.twig
+++ b/templates/archive.twig
@@ -99,7 +99,10 @@
                         }
                     } %}#}
 
-                    {% include 'static-sections/promo-area.twig' %}
+                    {#{% include 'static-sections/promo-area.twig' %}#}
+                    {% include 'static-sections/book-valuation.twig' with {
+                        short: 1
+                    } %}
 
                 </div>
                 <div class="col-xl-3 offset-xl-1">
