--- a/templates/single.twig
+++ b/templates/single.twig
@@ -45,7 +45,11 @@
                         posts: related_posts_query
                     } %}
 
-                    {% include 'static-sections/promo-area.twig' %}
+                    {#{% include 'static-sections/promo-area.twig' %}#}
+                    {% include 'static-sections/book-valuation.twig' with {
+                        short: 1
+                    } %}
+
                 </div>
                 <div class="col-xl-3 offset-xl-1">
 
