--- a/templates/propertyhive/property-detail/arrange-viewing.twig
+++ b/templates/propertyhive/property-detail/arrange-viewing.twig
@@ -4,7 +4,7 @@
             <h3 class="text-uppercase">Arrange a viewing</h3>
             <div class="branch-info">
                 <div class="branch-info--name">{{ branch_data.title }} Branch</div>
-                <div class="branch-info--phone-number h3 mb-0 text-uppercase">{{ branch_data.phone }}</div>
+                <a href="tel:{{ branch_data.phone | replace({' ':''}) }}" class="branch-info--phone-number h3 mb-0 text-uppercase">{{ branch_data.phone }}</a>
                 <a href="#" class="btn btn-lg btn-secondary text-uppercase">Email Us</a>
                 {% if branch_data.address %}
                     <div class="branch-info--address">
