--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -12,7 +12,8 @@
     <meta name="theme-color" content="{{options.android_navigation_bar_colour}}">
     <meta name="msapplication-navbutton-color" content="{{options.android_navigation_bar_colour}}">
 
-    <script src="https://kit.fontawesome.com/d7df359a02.js" crossorigin="anonymous"></script>
+    <link rel="dns-prefetch" href="https://kit.fontawesome.com/">
+    <script src="https://kit.fontawesome.com/d7df359a02.js" crossorigin="anonymous" defer></script>
     {#<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>#}
 
     {{ function('wp_head') }}
