--- a/src/sass/essential/global/_blog-post.scss
+++ b/src/sass/essential/global/_blog-post.scss
@@ -9,6 +9,7 @@
     &--image{
         position: relative;
         border: 1px solid $support-color4;
+        overflow: hidden;
 
         &__cat{
             position: absolute;
@@ -16,6 +17,10 @@
             left: -1px;
             bottom: -1px;
             padding: 15px 20px;
+        }
+
+        img{
+            transition: transform .2s;
         }
     }
 
@@ -30,5 +35,12 @@
 
     & > *:last-child{
         margin-bottom: 0;
+    }
+    &:hover{
+        .blog-post--image{
+            img{
+                transform: scale(1.2);
+            }
+        }
     }
 }
